// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test div in space 1`] = `
"<div class=\\"var-space var--box\\" style=\\"flex-direction: row; justify-content: start; flex-wrap: wrap; margin-top: -2px;\\">
  <div style=\\"margin: 2px 2px 2px 0px;\\">
    <div></div>
  </div>
  <div style=\\"margin: 2px 2px;\\">
    <div></div>
  </div>
  <div style=\\"margin: 2px 2px;\\">
    <div></div>
  </div>
  <div style=\\"margin: 2px 0px 2px 2px;\\">
    <div></div>
  </div>
</div>"
`;

exports[`test div in space 2`] = `
"<div class=\\"var-space var--box\\" style=\\"flex-direction: row; justify-content: start; flex-wrap: wrap; margin-top: -5px;\\">
  <div style=\\"margin: 5px 10px 5px 0px;\\">
    <div></div>
  </div>
  <div style=\\"margin: 5px 10px;\\">
    <div></div>
  </div>
  <div style=\\"margin: 5px 10px;\\">
    <div></div>
  </div>
  <div style=\\"margin: 5px 0px 5px 10px;\\">
    <div></div>
  </div>
</div>"
`;

exports[`test div in space 3`] = `
"<div class=\\"var-space var--box var-space--inline\\" style=\\"flex-direction: column; justify-content: start; flex-wrap: wrap; margin-top: -5px; margin-bottom: -5px;\\">
  <div style=\\"margin: 0px 0px 10px 0px;\\">
    <var-button>Button1</var-button>
  </div>
  <div style=\\"margin: 0px 0px 10px 0px;\\">
    <var-button>Button2</var-button>
  </div>
  <div style=\\"margin: 0px;\\">
    <var-button>Button3</var-button>
  </div>
</div>"
`;

exports[`test div in space 4`] = `
"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: start; flex-wrap: wrap; margin-top: -5px; margin-bottom: -5px;\\">
  <div style=\\"margin: 0px 0px 10px 0px;\\">
    <var-button>Button1</var-button>
  </div>
  <div style=\\"margin: 0px 0px 10px 0px;\\">
    <var-button>Button2</var-button>
  </div>
  <div style=\\"margin: 0px;\\">
    <var-button>Button3</var-button>
  </div>
</div>"
`;

exports[`test space example 1`] = `
"<div class=\\"app-type\\">基本用法</div>
<div class=\\"var-space var--box\\" style=\\"flex-direction: row; justify-content: start; flex-wrap: wrap; margin-top: -4px;\\">
  <div style=\\"margin: 4px 6px 4px 0px;\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--1\\">
      <!--v-if-->
      <div class=\\"var-button__content\\">Button1</div>
    </button></div>
  <div style=\\"margin: 4px 6px;\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--1\\">
      <!--v-if-->
      <div class=\\"var-button__content\\">Button2</div>
    </button></div>
  <div style=\\"margin: 4px 0px 4px 6px;\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--1\\">
      <!--v-if-->
      <div class=\\"var-button__content\\">Button3</div>
    </button></div>
</div>
<div class=\\"app-type\\">垂直</div>
<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: start; flex-wrap: wrap;\\">
  <div style=\\"margin: 0px 0px 12px 0px;\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--1\\">
      <!--v-if-->
      <div class=\\"var-button__content\\">Button1</div>
    </button></div>
  <div style=\\"margin: 0px 0px 12px 0px;\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--1\\">
      <!--v-if-->
      <div class=\\"var-button__content\\">Button2</div>
    </button></div>
  <div style=\\"margin: 0px;\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--1\\">
      <!--v-if-->
      <div class=\\"var-button__content\\">Button3</div>
    </button></div>
</div>
<div class=\\"app-type\\">间隙</div>
<div class=\\"var-space var--box\\" style=\\"flex-direction: row; justify-content: start; flex-wrap: wrap; margin-top: -15px;\\">
  <div style=\\"margin: 15px 5px 15px 0px;\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--1\\">
      <!--v-if-->
      <div class=\\"var-button__content\\">Button1</div>
    </button></div>
  <div style=\\"margin: 15px 5px;\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--1\\">
      <!--v-if-->
      <div class=\\"var-button__content\\">Button2</div>
    </button></div>
  <div style=\\"margin: 15px 0px 15px 5px;\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--1\\">
      <!--v-if-->
      <div class=\\"var-button__content\\">Button3</div>
    </button></div>
</div>
<div class=\\"app-type\\">靠右</div>
<div class=\\"var-space var--box\\" style=\\"flex-direction: row; justify-content: end; flex-wrap: wrap; margin-top: -4px;\\">
  <div style=\\"margin: 4px 6px 4px 0px;\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--1\\">
      <!--v-if-->
      <div class=\\"var-button__content\\">Button1</div>
    </button></div>
  <div style=\\"margin: 4px 0px 4px 6px;\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--1\\">
      <!--v-if-->
      <div class=\\"var-button__content\\">Button2</div>
    </button></div>
</div>"
`;

exports[`test space props 1`] = `"<div class=\\"var-space var--box\\" style=\\"flex-direction: row; justify-content: start; flex-wrap: wrap; margin-top: -4px;\\"></div>"`;

exports[`test space props 2`] = `"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: start; flex-wrap: wrap; margin-top: -4px;\\"></div>"`;

exports[`test space props 3`] = `"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: start; flex-wrap: wrap; margin-top: -4px;\\"></div>"`;

exports[`test space props 4`] = `"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: start; flex-wrap: wrap; margin-top: -4px;\\"></div>"`;

exports[`test space props 5`] = `"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: start; flex-wrap: wrap; margin-top: -4px;\\"></div>"`;

exports[`test space props 6`] = `"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: start; flex-wrap: wrap; margin-top: -4px;\\"></div>"`;

exports[`test space props 7`] = `"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: start; flex-wrap: wrap; margin-top: -4px;\\"></div>"`;

exports[`test space props 8`] = `"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: start; flex-wrap: wrap; margin-top: -4px;\\"></div>"`;

exports[`test space props 9`] = `"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: start; flex-wrap: wrap; margin-top: -4px;\\"></div>"`;

exports[`test space props 10`] = `"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: start; flex-wrap: wrap; margin-top: -4px;\\"></div>"`;

exports[`test space props 11`] = `"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: start; flex-wrap: nowrap; margin-top: -4px;\\"></div>"`;

exports[`test space props 12`] = `"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: start; flex-wrap: nowrap; margin-top: -4px;\\"></div>"`;

exports[`test space props 13`] = `"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: start; flex-wrap: nowrap; margin-top: -4px;\\"></div>"`;

exports[`test space props 14`] = `"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: end; flex-wrap: nowrap; margin-top: -4px;\\"></div>"`;

exports[`test space props 15`] = `"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: center; flex-wrap: nowrap; margin-top: -4px;\\"></div>"`;

exports[`test space props 16`] = `"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: space-between; flex-wrap: nowrap; margin-top: -4px;\\"></div>"`;

exports[`test space props 17`] = `"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: space-around; flex-wrap: nowrap; margin-top: -4px;\\"></div>"`;

exports[`test space props 18`] = `"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: space-around; flex-wrap: nowrap; margin-top: -4px; align-items: start;\\"></div>"`;

exports[`test space props 19`] = `"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: space-around; flex-wrap: nowrap; margin-top: -4px; align-items: center;\\"></div>"`;

exports[`test space props 20`] = `"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: space-around; flex-wrap: nowrap; margin-top: -4px; align-items: end;\\"></div>"`;

exports[`test space props 21`] = `"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: space-around; flex-wrap: nowrap; margin-top: -4px; align-items: stretch;\\"></div>"`;

exports[`test space props 22`] = `"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: space-around; flex-wrap: nowrap; margin-top: -4px; align-items: baseline;\\"></div>"`;

exports[`test space props 23`] = `"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: space-around; flex-wrap: nowrap; margin-top: -4px; align-items: initial;\\"></div>"`;

exports[`test space props 24`] = `"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: space-around; flex-wrap: nowrap; margin-top: -4px; align-items: inherit;\\"></div>"`;

exports[`test space props 25`] = `"<div class=\\"var-space var--box var-space--inline\\" style=\\"flex-direction: column; justify-content: space-around; flex-wrap: nowrap; margin-top: -4px; align-items: inherit;\\"></div>"`;

exports[`test space props 26`] = `"<div class=\\"var-space var--box\\" style=\\"flex-direction: column; justify-content: space-around; flex-wrap: nowrap; margin-top: -4px; align-items: inherit;\\"></div>"`;
